# pyvisa-proxy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  AUTHORS.md  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: docs.yml  python-publish.yml  tests.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  server.rst
pyvisa_remote/: RemoteClient.py  RemoteServer.py  __init__.py  __main__.py  remote_client.py  remote_server.py
src/pyvisa/remote/: PyVisaRemoteClient.py  PyVisaRemoteServer.py  __init__.py  __main__.py
src/pyvisa/remote/data/: job.schema.json
src/pyvisa_proxy/: ProxyResource.py  ProxyServer.py  RpcClient.py  __init__.py  __main__.py  _main.py  _version_handling.py  highlevel.py  proxy_resource.py  proxy_server.py  remote_client.py  remote_server.py  rpc_client.py  version.py
src/pyvisa_proxy/data/: job.schema.json
tests/: conftest.py  dummy.yaml  test_argparse.py  test_highlevel.py  test_integration.py  test_proxy_resource.py  test_proxy_server.py  test_remote_client.py  utils.py
