[metadata]
name = pyvisa.remote
description = PyVISA remote server and client in order to address "remote" local hardware
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyvisa, remote-control, zmq

author = Carsten Sauerbrey
author_email = carsten.sauerbrey@gmail.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@gmail.com

url = https://github.com/casabre/pyvisa-remote

license = MIT

platform = 
    Unix
    Linux
    Windows

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.6
install_requires = 
    pyvisa
    pyvisa-py
    msgpack
    pyzmq
    jsonschema
    tblib
use_scm_version = True
setup_requires =
    setuptools_scm

[options.package_data]
pyvisa.remote =
    data/*

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True