[metadata]
name = PyVISA-remote
author = Carsten Sauerbrey
author_email = carsten.sauerbrey@gmail.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@gmail.com
license = MIT
description = PyVISA remote server and client in order to address "remote" local hardware
keywords = 
    Remote
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
    zmq
url = https://github.com/casabre/pyvisa-remote
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Linux; Windows; Mac

[options]
packages=
    pyvisa_remote
python_requires = >=3.6
install_requires = 
    pyvisa
    pyvisa-py
    msgpack
    pyzmq
    jsonschema
    tblib
    importlib-metadata; python_version<"3.8"
use_scm_version = True
setup_requires =
    setuptools_scm

[options.package_data]
pyvisa.remote =
    data/*

[options.packages.find]
where=pyvisa_remote

[mypy]
ignore_missing_imports = True