[metadata]
name = pyvisa-proxy
author = Carsten Sauerbrey
author_email = carsten.sauerbrey@gmail.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@gmail.com
license = MIT
description = PyVISA remote proxy server and client in order to address "remote" hardware as local
keywords = 
    Remote
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
    zmq
url = https://github.com/casabre/pyvisa-proxy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Linux; Windows; Mac

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires = 
    pyvisa # TODO: >=1.12.0 include when official version available
    pyvisa-py
    pyzmq
    jsonschema
    tblib
    dill
    six
    importlib-metadata; python_version<"3.8"
use_scm_version = True
setup_requires =
    setuptools_scm

[options.package_data]
pyvisa_proxy =
    data/*

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
test =
    pytest
    coverage[toml]
    pytest-cov
    pytest-asyncio
    pyvisa-sim
